consolidate OAuthProvider and OAuthStrategy

--- a/docs/references/javascript/sign-in/authenticate-with.mdx
+++ b/docs/references/javascript/sign-in/authenticate-with.mdx
@@ -21,7 +21,7 @@ Signs in users via OAuth. This is commonly known as Single Sign On (SSO), where 
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `strategy` | `string` | The OAuth provider that will be used for signing in. Must be one of the supported [`OAuthStrategy`](/docs/references/javascript/types/oauth-strategy). |
+| `strategy` | <code>[OAuthStrategy](/docs/references/javascript/types/oauth#o-auth-strategy) \| 'saml'</code> |  The strategy corresponding to the OAuth provider. For example: `oauth_facebook`, `oauth_github`, etc. |
 | `redirectUrl` | `string` | The URL that the OAuth provider should redirect to, on successful authorization on their part. |
 | `redirectUrlComplete` | `string` | The URL that the user will be redirected to, after successful authorization from the OAuth provider and Clerk sign in. |
 
