--- a/docs/references/javascript/types/oauth.mdx
+++ b/docs/references/javascript/types/oauth.mdx
@@ -1,9 +1,13 @@
 ---
-title: OAuthProvider
-description: Options for OAuth providers.
+title: OAuth Types
+description: Types related to OAuth providers and strategies.
 ---
 
-# `OAuthProvider`
+# OAuth Types
+
+## `OAuthProvider`
+
+A type that represents the OAuth provider.
 
 ```ts
 type FacebookOauthProvider = 'facebook';
@@ -33,29 +37,31 @@ type SlackOauthProvider = 'slack';
 type LinearOauthProvider = 'linear';
 
 type OAuthProvider =
-  | FacebookOauthProvider
-  | GoogleOauthProvider
-  | HubspotOauthProvider
-  | GithubOauthProvider
-  | TiktokOauthProvider
-  | GitlabOauthProvider
-  | DiscordOauthProvider
-  | TwitterOauthProvider
-  | TwitchOauthProvider
-  | LinkedinOauthProvider
-  | LinkedinOIDCOauthProvider
-  | DropboxOauthProvider
-  | AtlassianOauthProvider
-  | BitbucketOauthProvider
-  | MicrosoftOauthProvider
-  | NotionOauthProvider
-  | AppleOauthProvider
-  | LineOauthProvider
-  | InstagramOauthProvider
-  | CoinbaseOauthProvider
-  | SpotifyOauthProvider
-  | XeroOauthProvider
-  | BoxOauthProvider
-  | SlackOauthProvider
-  | LinearOauthProvider;
+  | 'facebook'
+  | 'google'
+  | 'hubspot'
+  | 'github'
+  | 'tiktok'
+  | 'gitlab'
+  | 'discord'
+  | 'twitter'
+  | 'twitch'
+  | 'linkedin'
+  | 'linkedin_oidc'
+  | 'dropbox'
+  | 'bitbucket'
+  | 'microsoft'
+  | 'notion'
+  | 'apple'
+  | 'x';
+```
+
+## `OAuthStrategy`
+
+A type that represents the OAuth strategy for a given provider.
+
+For example, when creating a [`SignIn`](/docs/references/javascript/sign-in/sign-in#sign-in-create-params) or [`SignUp`](/docs/references/javascript/sign-up/sign-up#sign-up-create-params), you can pass the `strategy` option to specify the OAuth strategy to use.
+
+```js
+type OAuthStrategy = `oauth_${OAuthProvider}`
 ```
