--- a/docs/references/javascript/user/create-metadata.mdx
+++ b/docs/references/javascript/user/create-metadata.mdx
@@ -341,7 +341,7 @@ function createExternalAccount: (params: CreateExternalAccountParams) => Promise
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `strategy` | [`OAuthStrategy`](/docs/references/javascript/types/oauth-strategy) | The strategy corresponding to the oauth provider, e.g. `oauth_facebook`, `oauth_github`, etc |
+| `strategy` | [`OAuthStrategy`](/docs/references/javascript/types/oauth#o-auth-strategy) | The strategy corresponding to the OAuth provider. For example: `oauth_facebook`, `oauth_github`, etc. |
 | `redirectUrl?` | `string` | The URL to redirect back to one the OAuth flow has completed successfully or unsuccessfully. |
 | `additionalScopes?` | `string[]` | Any additional scopes you would like your user to be prompted to approve. |
 
