--- a/docs/references/backend/user/get-user-oauth-access-token.mdx
+++ b/docs/references/backend/user/get-user-oauth-access-token.mdx
@@ -16,7 +16,7 @@ function getUserOauthAccessToken: (userId: string, provider: `oauth_${OAuthProvi
 | Name | Type | Description |
 | --- | --- | --- |
 | `userId` | `string` | The ID of the user to retrieve. |
-| `provider` | <code>oauth_$\{[OAuthProvider](/docs/references/javascript/types/oauth-provider)\}</code> | The OAuth provider to retrieve the access token for. |
+| `provider` | <code>oauth_$\{[OAuthProvider](/docs/references/javascript/types/oauth#o-auth-provider)\}</code> | The OAuth provider to retrieve the access token for. |
 
 ## Example
 
