move demo repositories to nextjs reference overview and sidenav

--- a/docs/references/nextjs/overview.mdx
+++ b/docs/references/nextjs/overview.mdx
@@ -54,3 +54,10 @@ Both `auth()` and `getAuth()` return an `Auth` object. This JavaScript object co
 ### `authMiddleware()`
 
 The `authMiddleware()` helper integrates Clerk authentication into your Next.js application through middleware. It allows you to integrate authorization into both the client and server of your application. You can learn more [here](/docs/references/nextjs/auth-middleware).
+
+### Demo repositories
+
+To see an example of Clerk's features, such as user and organization management, integrated in a single application, explore the Clerk + Next.js demo repositories:
+
+- [Clerk + Next.js App Router Demo](https://github.com/clerk/clerk-nextjs-demo-app-router)
+- [Clerk + Next.js Pages Router Demo](https://github.com/clerk/clerk-nextjs-demo-pages-router)
