break up codeblocktabs

--- a/docs/references/javascript/user/password-management.mdx
+++ b/docs/references/javascript/user/password-management.mdx
@@ -31,7 +31,41 @@ function updatePassword: (params: UpdateUserPasswordParams) => Promise<User>;
 
 <Tabs type="npm-script" items={['NPM module', '<script>']}>
   <Tab>
-    <CodeBlockTabs options={["main.js", "index.html"]}>
+    For the following example, your HTML file should look like this:
+
+    ```html filename="index.html"
+    <!doctype html>
+    <html lang="en">
+      <head>
+        <meta charset="UTF-8" />
+        <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Clerk + JavaScript App</title>
+      </head>
+      <body>
+        <div id="app"></div>
+
+        <h1>Update password</h1>
+        <input
+          type="password"
+          id="current-password"
+          placeholder="Current password"
+        />
+        <input
+          type="password"
+          id="new-password"
+          placeholder="New password"
+        />
+        <p id="error"></p>
+        <button id="update-password-button">Update password</button>
+
+        <script type="module" src="/main.js"></script>
+      </body>
+    </html>
+    ```
+
+    And your JavaScript file should look like this:
+
     ```js filename="main.js"
     import Clerk from '@clerk/clerk-js';
 
@@ -69,38 +103,6 @@ function updatePassword: (params: UpdateUserPasswordParams) => Promise<User>;
       clerk.mountSignIn(signInDiv);
     }
     ```
-
-    ```html filename="index.html"
-    <!doctype html>
-    <html lang="en">
-      <head>
-        <meta charset="UTF-8" />
-        <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Clerk + JavaScript App</title>
-      </head>
-      <body>
-        <div id="app"></div>
-
-        <h1>Update password</h1>
-        <input
-          type="password"
-          id="current-password"
-          placeholder="Current password"
-        />
-        <input
-          type="password"
-          id="new-password"
-          placeholder="New password"
-        />
-        <p id="error"></p>
-        <button id="update-password-button">Update password</button>
-
-        <script type="module" src="/main.js"></script>
-      </body>
-    </html>
-    ```
-    </CodeBlockTabs>
   </Tab>
 
   <Tab>
