--- a/docs/references/javascript/user/password-management.mdx
+++ b/docs/references/javascript/user/password-management.mdx
@@ -1,39 +1,314 @@
 ---
 title: User Password Management
-description: Learn about the methods on the User object that help you manage a user's password.
+description: Explore methods on the User object that help you manage a user's password.
 ---
 
 # User password management
 
-The [`User`](/docs/references/javascript/user/user) object has methods that help you manage a user's password.
+These methods on the [`User`](/docs/references/javascript/user/user) object help you manage a user's password.
+
+The following examples assume that you have followed the [quickstart](/docs/quickstarts/javascript) in order to add Clerk to your JavaScript application.
 
 ## `updatePassword()`
+
+Updates the user's password. Passwords must be at least 8 characters long.
 
 ```typescript
 function updatePassword: (params: UpdateUserPasswordParams) => Promise<User>;
 ```
 
-Updates the user's password.
-
 ### `UpdateUserPasswordParams`
-
 
 | Name | Type | Description |
 | --- | --- | --- |
 | `newPassword` | `string` | The user's new password. |
-| `currentPassword?` | `string` | The user's current password. |
+| `currentPassword` | `string` | The user's current password. |
 | `signOutOfOtherSessions?` | `boolean \| undefined` | If set to `true`, all sessions will be signed out. |
 
+### `updatePassword()` example
+
+<InjectKeys>
+
+<Tabs type="npm-script" items={['NPM module', '<script>']}>
+  <Tab>
+    For the following example, your HTML file should look like this:
+
+    ```html filename="index.html"
+    <!doctype html>
+    <html lang="en">
+      <head>
+        <meta charset="UTF-8" />
+        <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Clerk + JavaScript App</title>
+      </head>
+      <body>
+        <div id="app"></div>
+
+        <h1>Update password</h1>
+        <input
+          type="password"
+          id="current-password"
+          placeholder="Current password"
+        />
+        <input
+          type="password"
+          id="new-password"
+          placeholder="New password"
+        />
+        <p id="error"></p>
+        <button id="update-password-button">Update password</button>
+
+        <script type="module" src="/main.js"></script>
+      </body>
+    </html>
+    ```
+
+    And your JavaScript file should look like this:
+
+    ```js filename="main.js"
+    import Clerk from '@clerk/clerk-js';
+
+    // Initialize Clerk with your Clerk publishable key
+    const clerk = new Clerk('{{pub_key}}');
+    await clerk.load();
+
+    if (clerk.user) {
+      document
+        .getElementById("update-password-button")
+        .addEventListener("click", async function () {
+          const currentPassword = document.getElementById("current-password").value;
+          const newPassword = document.getElementById("new-password").value;
+          clerk.user.updatePassword({
+            currentPassword,
+            newPassword,
+          })
+          .then((response) => {
+            console.log(response);
+            console.log("Password updated successfully");
+          })
+          .catch((error) => {
+            document.getElementById("error").innerHTML =
+              error.errors[0].longMessage;
+            console.log("An error occurred:", error.errors);
+          });
+        });
+    } else {
+      document.getElementById("app").innerHTML = `
+        <div id="sign-in"></div>
+      `;
+
+      const signInDiv = document.getElementById("sign-in");
+
+      clerk.mountSignIn(signInDiv);
+    }
+    ```
+  </Tab>
+
+  <Tab>
+  ```html filename="index.html"
+    <div id="app"></div>
+
+    <h1>Update password</h1>
+    <input
+      type="password"
+      id="current-password"
+      placeholder="Current password"
+    />
+    <input
+      type="password"
+      id="new-password"
+      placeholder="New password"
+    />
+    <p id="error"></p>
+    <button id="update-password-button">Update password</button>
+
+    <script
+      async
+      crossorigin="anonymous"
+      data-clerk-publishable-key='{{pub_key}}'
+      src="https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+      type="text/javascript"
+    ></script>
+
+    <script>
+      window.addEventListener("load", async function () {
+        await Clerk.load();
+
+        if (Clerk.user) {
+          document
+            .getElementById("update-password-button")
+            .addEventListener("click", async function () {
+              const currentPassword =
+                document.getElementById("current-password").value;
+              const newPassword = document.getElementById("new-password").value;
+              Clerk.user.updatePassword({
+                currentPassword,
+                newPassword,
+              })
+              .then((response) => {
+                console.log(response);
+                console.log("Password updated successfully");
+              })
+              .catch((error) => {
+                document.getElementById("error").innerHTML =
+                  error.errors[0].longMessage;
+                console.log("An error occurred:", error.errors);
+              });
+            });
+        } else {
+          document.getElementById("app").innerHTML = `
+              <div id="sign-in"></div>
+            `;
+
+          const signInDiv = document.getElementById("sign-in");
+
+          Clerk.mountSignIn(signInDiv);
+        }
+      });
+    </script>
+  ```
+  </Tab>
+</Tabs>
+
+</InjectKeys>
+
 ## `removePassword()`
+
+Removes the user's password.
 
 ```typescript
 function removePassword: (params: RemoveUserPasswordParams) => Promise<User>;
 ```
-
-Removes the user's password.
 
 ### `RemoveUserPasswordParams`
 
 | Name | Type | Description |
 | --- | --- | --- |
 | `currentPassword` | `string` | The user's current password. |
+
+### `removePassword()` example
+
+<InjectKeys>
+
+<Tabs type="npm-script" items={['NPM module', '<script>']}>
+  <Tab>
+    <CodeBlockTabs options={["main.js", "index.html"]}>
+    ```js filename="main.js"
+    import Clerk from '@clerk/clerk-js';
+
+    // Initialize Clerk with your Clerk publishable key
+    const clerk = new Clerk('{{pub_key}}');
+    await clerk.load();
+
+    if (clerk.user) {
+      document
+        .getElementById("remove-password-button")
+        .addEventListener("click", async () => {
+          const currentPassword = document.getElementById("current-password").value;
+          clerk.user.removePassword({ currentPassword })
+            .then((response) => {
+              console.log(response);
+              console.log("Password removed successfully");
+            })
+            .catch((error) => {
+              document.getElementById("error").innerHTML =
+                error.errors[0].longMessage;
+              console.log("An error occurred:", error.errors);
+            });
+        });
+    } else {
+      document.getElementById("app").innerHTML = `
+        <div id="sign-in"></div>
+      `;
+
+      const signInDiv = document.getElementById("sign-in");
+
+      clerk.mountSignIn(signInDiv);
+    }
+    ```
+
+    ```html filename="index.html"
+    <!doctype html>
+    <html lang="en">
+      <head>
+        <meta charset="UTF-8" />
+        <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Clerk + JavaScript App</title>
+      </head>
+      <body>
+        <div id="app"></div>
+
+        <input
+          type="password"
+          id="current-password"
+          placeholder="Current password"
+        />
+        <p id="error"></p>
+        <button id="remove-password-button">Remove Password</button>
+
+        <script type="module" src="/main.js"></script>
+      </body>
+    </html>
+    ```
+    </CodeBlockTabs>
+  </Tab>
+
+  <Tab>
+  ```html filename="index.html"
+    <div id="app"></div>
+
+    <input
+      type="password"
+      id="current-password"
+      placeholder="Current password"
+    />
+    <p id="error"></p>
+    <button id="remove-password-button">Remove Password</button>
+
+    <script
+      async
+      crossorigin="anonymous"
+      data-clerk-publishable-key='{{pub_key}}'
+      src="https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+      type="text/javascript"
+    ></script>
+
+    <script>
+      window.addEventListener("load", async function () {
+        await Clerk.load();
+
+        if (Clerk.user) {
+          document
+            .getElementById("remove-password-button")
+            .addEventListener("click", async () => {
+              const currentPassword =
+                document.getElementById("current-password").value;
+              Clerk.user.removePassword({ currentPassword })
+                .then((response) => {
+                  console.log(response);
+                  console.log("Password removed successfully");
+                })
+                .catch((error) => {
+                  document.getElementById("error").innerHTML =
+                    error.errors[0].longMessage;
+                  console.log("An error occurred:", error.errors);
+                });
+            });
+        } else {
+          document.getElementById("app").innerHTML = `
+              <div id="sign-in"></div>
+            `;
+
+          const signInDiv = document.getElementById("sign-in");
+
+          Clerk.mountSignIn(signInDiv);
+        }
+      });
+    </script>
+  ```
+  </Tab>
+</Tabs>
+
+</InjectKeys>
