break up codeblocktabs

--- a/docs/references/javascript/user/create-metadata.mdx
+++ b/docs/references/javascript/user/create-metadata.mdx
@@ -366,7 +366,33 @@ The following example demonstrates how to add a Notion account as an external ac
 
 <Tabs type="npm-script" items={['NPM module', '<script>']}>
   <Tab>
-    <CodeBlockTabs options={["main.js", "index.html"]}>
+    For the following example, your HTML file should look like this:
+
+    ```html filename="index.html"
+    <!doctype html>
+    <html lang="en">
+      <head>
+        <meta charset="UTF-8" />
+        <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Clerk + JavaScript App</title>
+      </head>
+      <body>
+        <div id="app"></div>
+
+        <p>
+          Notion verification status:
+          <span id="notion-status"></span>
+        </p>
+        <button id="add-notion">Add Notion as a social connection</button>
+
+        <script type="module" src="/main.js"></script>
+      </body>
+    </html>
+    ```
+
+    And your JavaScript file should look like this:
+
     ```js filename="main.js"
     import Clerk from '@clerk/clerk-js';
 
@@ -405,30 +431,6 @@ The following example demonstrates how to add a Notion account as an external ac
       clerk.mountSignIn(signInDiv);
     }
     ```
-
-    ```html filename="index.html"
-    <!doctype html>
-    <html lang="en">
-      <head>
-        <meta charset="UTF-8" />
-        <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Clerk + JavaScript App</title>
-      </head>
-      <body>
-        <div id="app"></div>
-
-        <p>
-          Notion verification status:
-          <span id="notion-status"></span>
-        </p>
-        <button id="add-notion">Add Notion as a social connection</button>
-
-        <script type="module" src="/main.js"></script>
-      </body>
-    </html>
-    ```
-    </CodeBlockTabs>
   </Tab>
 
   <Tab>
