break up codeblocktabs that demonstrate two files in same app

--- a/docs/quickstarts/javascript.mdx
+++ b/docs/quickstarts/javascript.mdx
@@ -135,57 +135,54 @@ Select your preferred method below to get started.
       - [`<SignIn />`](/docs/components/authentication/sign-in): renders a user interface for signing in.
       - [`<UserButton />`](/docs/components/user/user-button): shows the avatar from the account the user is signed in with. When clicked, it opens a dropdown menu with options to sign out.
 
-      <Tabs items={["index.js", "index.html"]}>
-        <Tab>
-          ```js filename="main.js"
-          import Clerk from "@clerk/clerk-js";
+      Your `main.js` file should look something like this:
 
-          const clerkPubKey = import.meta.env.VITE_CLERK_PUBLISHABLE_KEY;
+      ```js filename="main.js"
+      import Clerk from "@clerk/clerk-js";
 
-          const clerk = new Clerk(clerkPubKey);
-          await clerk.load();
+      const clerkPubKey = import.meta.env.VITE_CLERK_PUBLISHABLE_KEY;
 
-          if (clerk.user) {
-            document.getElementById("app").innerHTML = `
-              <div id="user-button"></div>
-            `;
+      const clerk = new Clerk(clerkPubKey);
+      await clerk.load();
 
-            const userButtonDiv =
-              document.getElementById("user-button");
+      if (clerk.user) {
+        document.getElementById("app").innerHTML = `
+          <div id="user-button"></div>
+        `;
 
-            clerk.mountUserButton(userButtonDiv);
-          } else {
-            document.getElementById("app").innerHTML = `
-              <div id="sign-in"></div>
-            `;
+        const userButtonDiv =
+          document.getElementById("user-button");
 
-            const signInDiv =
-              document.getElementById("sign-in");
+        clerk.mountUserButton(userButtonDiv);
+      } else {
+        document.getElementById("app").innerHTML = `
+          <div id="sign-in"></div>
+        `;
 
-            clerk.mountSignIn(signInDiv);
-          }
-          ```
-          </Tab>
+        const signInDiv =
+          document.getElementById("sign-in");
 
-          <Tab>
-          ```html filename="index.html"
-          <!doctype html>
-          <html lang="en">
-            <head>
-              <meta charset="UTF-8" />
-              <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-              <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-              <title>Vite App</title>
-            </head>
-            <body>
-              <div id="app"></div>
-              <script type="module" src="/main.js"></script>
-            </body>
-          </html>
-          ```
-          </Tab>
+        clerk.mountSignIn(signInDiv);
+      }
+      ```
 
-        </Tabs>
+      And your `index.html` file should look something like this:
+
+      ```html filename="index.html"
+      <!doctype html>
+      <html lang="en">
+        <head>
+          <meta charset="UTF-8" />
+          <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+          <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+          <title>Vite App</title>
+        </head>
+        <body>
+          <div id="app"></div>
+          <script type="module" src="/main.js"></script>
+        </body>
+      </html>
+      ```
     </Steps>
   </Tab>
 
