Move images to correct directory to match move of SAML

--- a/docs/authentication/saml/azure.mdx
+++ b/docs/authentication/saml/azure.mdx
@@ -35,13 +35,12 @@ Integrating Azure AD with Clerk allows you to use Azure AD as an identity provid
 ### Setup Clerk SAML Connection
 
 1. Create a new Enterprise Connection in the Clerk Dashboard. 
-
 2. Fill out the form with the details for your Azure AD application.
 
 <Images 
   width={3024}
   height={1652}
-  src="/docs/images/integrations/saml/azure/azure-saml-clerk-create-connection.avif"
+  src="/docs/images/authentication/saml/azure/azure-saml-clerk-create-connection.avif"
   alt="Steps to create a new Enterprise Connection in the Clerk Dashboard and fill out the form with the details for your Azure AD application"
 />
 
@@ -51,7 +50,7 @@ Find the Azure "Enterprise Applications" in the Azure Portal to navigate to crea
 <Images 
   width={3024}
   height={1652}
-  src="/docs/images/integrations/saml/azure/azure-ad-ent-applications-location.avif"
+  src="/docs/images/authentication/saml/azure/azure-ad-ent-applications-location.avif"
   alt="Find the Azure Enterprise Applications in the Azure Portal"
 />
 
@@ -61,7 +60,7 @@ Find and click on the "New Application" button to create a new Enterprise Applic
 <Images 
   width={3024}
   height={1652}
-  src="/docs/images/integrations/saml/azure/azure-new-app.avif"
+  src="/docs/images/authentication/saml/azure/azure-new-app.avif"
   alt="Create a new Azure Enterprise Application in the Azure Portal"
 />
 
@@ -71,7 +70,7 @@ Find the "Add User or Group" button and click it.
 <Images 
   width={3024}
   height={1652}
-  src="/docs/images/integrations/saml/azure/find-add-user.avif"
+  src="/docs/images/authentication/saml/azure/find-add-user.avif"
   alt="Pointing to find the 'Add User or Group' button and click it"
 />
 
@@ -86,7 +85,7 @@ Find the "Add User or Group" button and click it.
 <Images 
 width={3024} 
 height={1652} 
-src="/docs/images/integrations/saml/azure/assign-user-to-app.avif" 
+src="/docs/images/authentication/saml/azure/assign-user-to-app.avif" 
 alt="Steps to assign User or Group to the Enterprise Azure Application" 
 />
 
@@ -96,7 +95,7 @@ After you have assigned the user to the app, go to "Overview" in the left-hand m
 <Images
   width={3024}
   height={1652}
-  src="/docs/images/integrations/saml/azure/find-sso-setup.avif"
+  src="/docs/images/authentication/saml/azure/find-sso-setup.avif"
   alt="Pointing to find the SSO Setup in the Azure Portal in the Overview section"
 />
 
@@ -107,7 +106,13 @@ Choose the "SAML" option.
 2. Copy the "Identifier (Entity ID)" from the Clerk Dashboard and paste it into this field.
 3. Copy the "Reply URL (Assertion Consumer Service URL)" from the Clerk Dashboard and paste them into this FileSystemDirectoryHandle.
 Once those fields are filled out, click "Save" at the top of the page.
-<Images width={3024} height={1652} src="/docs/images/integrations/saml/azure/azure-basic-saml-configuration.avif" alt="Steps to configure the Basic SAML Configuration in the Azure Portal" />
+
+<Images 
+width={3024} 
+height={1652} 
+src="/docs/images/authentication/saml/azure/azure-basic-saml-configuration.avif" 
+alt="Steps to configure the Basic SAML Configuration in the Azure Portal" 
+/>
 
 #### Clerk Reference for Basic SAML Configuration
 Step 2 for Indentifer (Entity ID) and Step 3 for Reply URL (Assertion Consumer Service URL) are the values you will need to copy from the Clerk Dashboard and paste into the Azure Portal.
@@ -115,7 +120,7 @@ The numbers are directly related to Azure Portal's Basic SAML Configuration step
 <Images 
   width={3024}
   height={1652}
-  src="/docs/images/integrations/saml/azure/clerk-side-azure-basic-saml-config.avif"
+  src="/docs/images/authentication/saml/azure/clerk-side-azure-basic-saml-config.avif"
   alt="Clerk Reference for Basic SAML Configuration in the Azure Portal"
 />
 
@@ -125,7 +130,7 @@ Azure Federation Metadata URL location in the Azure Portal
 <Images 
   width={3024}
   height={1652}
-  src="/docs/images/integrations/saml/azure/federation-url-azure-side.avif"
+  src="/docs/images/authentication/saml/azure/federation-url-azure-side.avif"
   alt="Azure Federation Metadata URL location in the Azure Portal"
 />
 
@@ -133,7 +138,7 @@ Adding the Azure Federation Metadata URL to the Clerk IDP Metadata in Clerk Dash
 <Images
   width={3024}
   height={1652}
-  src="/docs/images/integrations/saml/azure/federation-url-clerk-side.avif"
+  src="/docs/images/authentication/saml/azure/federation-url-clerk-side.avif"
   alt="Adding the Azure Federation Metadata URL to the Clerk IDP Metadata in Clerk Dashboard"
 />
 
@@ -143,7 +148,7 @@ Find the edit button for Claims "Attributes & Claims" in the Azure Portal.
 <Images 
   width={3024}
   height={1652}
-  src="/docs/images/integrations/saml/azure/find-edit-attributes-claims.avif"
+  src="/docs/images/authentication/saml/azure/find-edit-attributes-claims.avif"
   alt="Mapping the Azure Claims to Clerk in the Azure Portal"
 />
 
@@ -151,7 +156,7 @@ Click on the email claim to edit the field.
 <Images 
   width={3024}
   height={1652}
-  src="/docs/images/integrations/saml/azure/click-email-claim-to-edit.avif"
+  src="/docs/images/authentication/saml/azure/click-email-claim-to-edit.avif"
   alt="Click on the email claim to edit the field in the Azure Portal"
 />
 
@@ -159,7 +164,7 @@ Update the email claim to "user.userprincipalname" and click "Save" at the top o
 <Images 
   width={3024}
   height={1652}
-  src="/docs/images/integrations/saml/azure/mail-to-user-userprinciplename.avif"
+  src="/docs/images/authentication/saml/azure/mail-to-user-userprinciplename.avif"
   alt="Update the email claim to 'user.userprincipalname' and click 'Save' at the top of the page in the Azure Portal"
 />
 
@@ -169,7 +174,7 @@ After you have completed the steps in the Azure Portal, go back to the Clerk Das
 <Images 
   width={3024}
   height={1652}
-  src="/docs/images/integrations/saml/azure/enable-connection-clerk.avif"
+  src="/docs/images/authentication/saml/azure/enable-connection-clerk.avif"
   alt="Enable the connection in the Clerk Dashboard"
 />
 
