--- a/docs/authentication/saml/okta.mdx
+++ b/docs/authentication/saml/okta.mdx
@@ -33,11 +33,13 @@ Integrating Okta with Clerk allows you to use Okta as an identity provider for y
 <Steps>
 
 ### Setup Clerk SAML Connection
+1. Create a new Enterprise Connection in the Clerk Dashboard. 
+2. Fill out the form with the details for your Okta Application.
 
 <Images 
   width={3024}
   height={1652}
-  src="/docs/images/integrations/saml/okta/create-enterprise-connection-clerk-dash.avif"
+  src="/docs/images/authentication/saml/okta/create-enterprise-connection-clerk-dash.avif"
   alt=""
 />
 
@@ -47,7 +49,7 @@ Integrating Okta with Clerk allows you to use Okta as an identity provider for y
 <Images 
   width={3024}
   height={1652}
-  src="/docs/images/integrations/saml/okta/find-create-okta-application.avif"
+  src="/docs/images/authentication/saml/okta/find-create-okta-application.avif"
   alt=""
 />
 
@@ -57,7 +59,7 @@ Integrating Okta with Clerk allows you to use Okta as an identity provider for y
 <Images 
   width={3024}
   height={1652}
-  src="/docs/images/integrations/saml/okta/choose-saml-in-app-create.avif"
+  src="/docs/images/authentication/saml/okta/choose-saml-in-app-create.avif"
   alt=""
 />
 
@@ -66,20 +68,20 @@ Integrating Okta with Clerk allows you to use Okta as an identity provider for y
 <Images 
   width={3024}
   height={1652}
-  src="/docs/images/integrations/saml/okta/find-okta-browser-plugin.avif"
+  src="/docs/images/authentication/saml/okta/find-okta-browser-plugin.avif"
   alt=""
 />
 
 #### Give the Application a Name
 
-<Images width={3024} height={1652} src="/docs/images/integrations/saml/okta/name-okta-app.avif" alt="" />
+<Images width={3024} height={1652} src="/docs/images/authentication/saml/okta/name-okta-app.avif" alt="" />
 
 ### SAML Configuration
 
 <Images
   width={3024}
   height={1652}
-  src="/docs/images/integrations/saml/okta/saml-settings-okta-side.avif"
+  src="/docs/images/authentication/saml/okta/saml-settings-okta-side.avif"
   alt=""
 />
 
@@ -88,21 +90,21 @@ Integrating Okta with Clerk allows you to use Okta as an identity provider for y
 <Images
   width={3024}
   height={1652}
-  src="/docs/images/integrations/saml/okta/clerk-side-saml-config-urls.avif"
+  src="/docs/images/authentication/saml/okta/clerk-side-saml-config-urls.avif"
   alt=""
 />
 
 ### Attribute Mapping in Okta to Clerk 
 
 You will want to add the following fields to the attribute mapping in Okta then proceed by clicking on "Next" to continue.
-<Images width={3024} height={1652} src="/docs/images/integrations/saml/okta/okta-attribute-mapping.avif" alt="" />
+<Images width={3024} height={1652} src="/docs/images/authentication/saml/okta/okta-attribute-mapping.avif" alt="" />
 
 Select "software vendor" as the application type and click "Finish" to complete the setup.
 
 <Images 
   width={3024}
   height={1652}
-  src="/docs/images/integrations/saml/okta/software-vendor.avif"
+  src="/docs/images/authentication/saml/okta/software-vendor.avif"
   alt=""
 />
 
@@ -113,7 +115,7 @@ Select "software vendor" as the application type and click "Finish" to complete 
 <Images 
   width={3024}
   height={1652}
-  src="/docs/images/integrations/saml/okta/navigate-to-assignments.avif"
+  src="/docs/images/authentication/saml/okta/navigate-to-assignments.avif"
   alt=""
 />
 
@@ -123,7 +125,7 @@ Once you have found the user or group you want to assign, click "Assign" to comp
 <Images
   width={3024}
   height={1652}
-  src="/docs/images/integrations/saml/okta/assign-user.avif"
+  src="/docs/images/authentication/saml/okta/assign-user.avif"
   alt=""
 />
 
@@ -133,7 +135,7 @@ Copy the Okta Metadata URL from Okta
 <Images 
   width={3024}
   height={1652}
-  src="/docs/images/integrations/saml/okta/okta-metadata-url.avif"
+  src="/docs/images/authentication/saml/okta/okta-metadata-url.avif"
   alt=""
 />
 
@@ -142,7 +144,7 @@ Paste the Okta Metadata URL into the Clerk Dashboard and save changes to complet
 <Images 
   width={3024}
   height={1652}
-  src="/docs/images/integrations/saml/okta/clerk-metadata-location.avif"
+  src="/docs/images/authentication/saml/okta/clerk-metadata-location.avif"
   alt=""
 />
 
@@ -153,7 +155,7 @@ Once you have pasted the Okta Metadata URL into the Clerk Dashboard, you will ne
 <Images 
   width={3024}
   height={1652}
-  src="/docs/images/integrations/saml/okta/enable-connection.avif"
+  src="/docs/images/authentication/saml/okta/enable-connection.avif"
   alt="Enable the connection in the Clerk Dashboard"
 />
 
