remove use of above

--- a/docs/advanced-usage/satellite-domains.mdx
+++ b/docs/advanced-usage/satellite-domains.mdx
@@ -79,12 +79,15 @@ CLERK_IS_SATELLITE=true
 
 You can configure your satellite application as a satellite application by setting the `isSatellite`, `domain`, and `signInUrl` properties.
 
-The properties related to the multi-domain setup are as follows:
-- `isSatellite`: `boolean | ((url: URL) => boolean)`. This option defines that the application is a satellite application.
-- `domain`: `string | ((url: URL) => boolean)`. This option sets the domain of the satellite application. This is required since we cannot figure this out by your publishable key, since it is the same for all of your multi-domain apps.
-- `signInUrl`: `string`. This url will be used for any redirects that might happen and needs to point to your primary application. This option is optional for production instances and required for development instances.
+The properties related to the multi-domain setup are:
 
-The `URL` mentioned above is the request url for server side usage or the current location for client usage.
+| Property | Type | Description |
+| --- | --- | --- |
+| `isSatellite` | `boolean` or `(url: URL) => boolean` | This option defines that the application is a satellite application. |
+| `domain` | `string` or `(url: URL) => boolean` | This option sets the domain of the satellite application. This is required since we cannot figure this out by your publishable key, since it is the same for all of your multi-domain apps. |
+| `signInUrl` | `string` | This url will be used for any redirects that might happen and needs to point to your primary application. This option is optional for production instances and required for development instances. |
+
+The `URL` parameter that can be passed to `isSatellite` and `domain` is the request url for server side usage or the current location for client usage.
 
 <Tabs type="framework" items={["Next.js", "Remix"]}>
   <Tab>
