Azure raw images

--- a/docs/authentication/saml/google.mdx
+++ b/docs/authentication/saml/google.mdx
@@ -29,3 +29,144 @@ Integrating Google SAML with Clerk process involves setting up a SAML applicatio
 <Callout type="info">
   You must have a local project with Clerk set up already to follow this tutorial. See [the quickstart docs](/docs/quickstarts/overview) to get started.
 </Callout>
+
+
+<Steps>
+
+### Setup Clerk SAML Connection
+1. Create a new Enterprise Connection in the Clerk Dashboard. 
+2. Fill out the form with the details for your Okta Application.
+
+<Images 
+  width={3024}
+  height={1652}
+  src="/docs/images/authentication/saml/.avif"
+  alt="Create a new Enterprise Connection in the Clerk Dashboard"
+/>
+
+### Find the Okta Enterprise Applications 
+
+
+<Images 
+  width={3024}
+  height={1652}
+  src="/docs/images/authentication/saml/.avif"
+  alt=""
+/>
+
+###  Create a new Okta Enterprise Application
+
+
+<Images 
+  width={3024}
+  height={1652}
+  src="/docs/images/authentication/saml/.avif"
+  alt=""
+/>
+
+### Find Okta Browser Plugin
+
+<Images 
+  width={3024}
+  height={1652}
+  src="/docs/images/authentication/saml/.avif"
+  alt=""
+/>
+
+#### Give the Application a Name
+
+<Images 
+width={3024} 
+height={1652} 
+src="/docs/images/authentication/saml/.avif" 
+/>
+
+### SAML Configuration
+
+<Images
+  width={3024}
+  height={1652}
+  src="/docs/images/authentication/saml/.avif"
+  alt=""
+/>
+
+#### Clerk Reference for SAML Settings
+
+<Images
+  width={3024}
+  height={1652}
+  src="/docs/images/authentication/saml/.avif"
+  alt=""
+/>
+
+### Attribute Mapping in Okta to Clerk 
+
+You will want to add the following fields to the attribute mapping in Okta then proceed by clicking on "Next" to continue.
+<Images 
+width={3024} 
+height={1652} 
+src="/docs/images/authentication/saml/.avif"
+alt="Attribute Mapping in Okta to Clerk" 
+/>
+
+Select "software vendor" as the application type and click "Finish" to complete the setup.
+
+<Images 
+  width={3024}
+  height={1652}
+  src="/docs/images/authentication/saml/.avif"
+  alt="Select 'software vendor' as the application type and click 'Finish' to complete the setup."
+/>
+
+### Assign Users to the Application
+1. Navigate to the "Assignments" tab 
+2. Click on "Assign" and "Assign to People" or "Assign to Groups"
+
+<Images 
+  width={3024}
+  height={1652}
+  src="/docs/images/authentication/saml/.avif"
+  alt=""
+/>
+
+#### Find the User or Group to Assign 
+
+Once you have found the user or group you want to assign, click "Assign" to complete the process.
+<Images
+  width={3024}
+  height={1652}
+  src="/docs/images/authentication/saml/.avif"
+  alt=""
+/>
+
+### Okta Metadata URL 
+
+Copy the Okta Metadata URL from Okta
+<Images 
+  width={3024}
+  height={1652}
+  src="/docs/images/authentication/saml/.avif"
+  alt=""
+/>
+
+Paste the Okta Metadata URL into the Clerk Dashboard and save changes to complete the setup.
+
+<Images 
+  width={3024}
+  height={1652}
+  src="/docs/images/authentication/saml/.avif"
+  alt=""
+/>
+
+
+### Enable the Connection in Clerk Dashboard
+
+Once you have pasted the Okta Metadata URL into the Clerk Dashboard, you will need to enable the connection to complete the setup.
+<Images 
+  width={3024}
+  height={1652}
+  src="/docs/images/authentication/saml/.avif"
+  alt="Enable the connection in the Clerk Dashboard"
+/>
+
+</Steps>
