--- a/docs/authentication/saml/okta.mdx
+++ b/docs/authentication/saml/okta.mdx
@@ -40,7 +40,7 @@ Integrating Okta with Clerk allows you to use Okta as an identity provider for y
   width={3024}
   height={1652}
   src="/docs/images/authentication/saml/okta/create-enterprise-connection-clerk-dash.avif"
-  alt=""
+  alt="Create a new Enterprise Connection in the Clerk Dashboard"
 />
 
 ### Find the Okta Enterprise Applications 
@@ -97,7 +97,12 @@ Integrating Okta with Clerk allows you to use Okta as an identity provider for y
 ### Attribute Mapping in Okta to Clerk 
 
 You will want to add the following fields to the attribute mapping in Okta then proceed by clicking on "Next" to continue.
-<Images width={3024} height={1652} src="/docs/images/authentication/saml/okta/okta-attribute-mapping.avif" alt="" />
+<Images 
+width={3024} 
+height={1652} 
+src="/docs/images/authentication/saml/okta/okta-attribute-mapping.avif" 
+alt="Attribute Mapping in Okta to Clerk" 
+/>
 
 Select "software vendor" as the application type and click "Finish" to complete the setup.
 
@@ -105,7 +110,7 @@ Select "software vendor" as the application type and click "Finish" to complete 
   width={3024}
   height={1652}
   src="/docs/images/authentication/saml/okta/software-vendor.avif"
-  alt=""
+  alt="Select 'software vendor' as the application type and click 'Finish' to complete the setup."
 />
 
 ### Assign Users to the Application
