Remove 'below' from text

--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -76,7 +76,7 @@ The final result should resemble the following:
 
 All Clerk hooks and components must be children of the [`<ClerkProvider>`](/docs/components/clerk-provider) component, which provides active session and user context.
 
-Select your preferred router below to learn how to make this data available across your entire app:
+Select your preferred router to learn how to make this data available across your entire app:
 
 <CodeBlockTabs type="router" options={["App Router", "Pages Router"]}>
   ```tsx filename="/src/app/layout.tsx" {1,10-14}
